transfer plugins to vendor/plugins

--- a/index.html
+++ b/index.html
@@ -678,25 +678,25 @@ BRIEF RIGHT SECTION
 SCRIPTS
 ============================== -->
 <script src="js/vendor/modernizr.js"></script>
-<script src="js/vendor/jquery-2.1.1.js"></script>
-<script src="js/popover.js"></script>
-<script src="js/dot-nav.js"></script>
-<script src="js/back-to-top.js"></script>
-<script src="js/vendor/bootstrap.min.js"></script>
-<script src="js/smoothscroll.js"></script>
-<script src="js/jquery.scrollTo.min.js"></script>
-<script src="js/jquery.localScroll.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/nivo-lightbox.min.js"></script>
-<script src="js/simple-expand.min.js"></script>
-<script src="js/wow.min.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/retina.min.js"></script>
-<script src="js/jquery.nav.js"></script>
-<script src="js/matchMedia.js"></script>
-<script src="js/jquery.ajaxchimp.min.js"></script>
-<script src="js/jquery.fitvids.js"></script>
-<script src="js/custom.js"></script>
+    <script src="js/vendor/jquery-2.1.1.js"></script>
+    <script src="js/dot-nav.js"></script>
+    <script src="js/popover.js"></script>
+    <script src="js/back-to-top.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/vendor/plugins/smoothscroll.js"></script>
+    <script src="js/vendor/plugins/jquery.scrollTo.min.js"></script>
+    <script src="js/vendor/plugins/jquery.localScroll.min.js"></script>
+    <script src="js/vendor/plugins/owl.carousel.min.js"></script>
+    <script src="js/vendor/plugins/nivo-lightbox.min.js"></script>
+    <script src="js/vendor/plugins/simple-expand.min.js"></script>
+    <script src="js/vendor/plugins/wow.min.js"></script>
+    <script src="js/vendor/plugins/jquery.stellar.min.js"></script>
+    <script src="js/vendor/plugins/retina.min.js"></script>
+    <script src="js/vendor/plugins/jquery.nav.js"></script>
+    <script src="js/vendor/plugins/matchMedia.js"></script>
+    <script src="js/vendor/plugins/jquery.ajaxchimp.min.js"></script>
+    <script src="js/vendor/plugins/jquery.fitvids.js"></script>
+    <script src="js/vendor/plugins/custom.js"></script>
 </body>
 
 </html>
