--- a/kalkulator.html
+++ b/kalkulator.html
@@ -113,8 +113,7 @@ PRELOADER
 HEADER
 ============================== -->
     <!-- content here -->
-    <header  class="header change-dot"  data-stellar-background-ratio="0.5" id="home" style="background:url(/images/calculator.jpg) no-repeat center top fixed; -webkit-background-size: cover;
-            background-size: cover;">
+    <header  class="header change-dot"  data-stellar-background-ratio="0.5" id="home">
 
 
         <!-- COLOR OVER IMAGE -->
